# nameFortuneJp

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  analyze_fortune_patterns.py  analyze_strokes.py  app.py  docker-compose.yml  env_sample  experiment_scraper.py  flask_request_context.py  fortune_analyzer.py  fortune_types.json  names.db  pyproject.toml  requirements.txt  scraper.py  test_fortune_analyzer.py  test_scraper.py
.github/workflows/: ci.yml
app/: ingest_runner.py  main.py
app/config/: __init__.py  fortune_types.json  settings.py
app/core/: fortune_analyzer.py  ingest.py  logging_config.py  models.py  name_generator.py  scraper.py
app/static/js/: script.js
app/templates/: analyze_strokes.html  base.html  index.html  name_generator.html
docs/: stroke_list_status.md  仕様書.md  機能一覧.md  画数別運勢一覧機能仕様書.md  要件定義書.md
static/: results_瀬口_1字.json
static/css/: style.css
temp/: test_ingest.py  test_names.db
templates/: analyze_strokes.html  base.html  index.html  name_generator.html  stroke_list.html
tests/: test_fortune_analyzer.py  test_scraper.py
